# obs-wlroots

./: .gitlab-ci.yml  Cargo.toml  install.sh  uninstall.sh
obs/: Cargo.toml
obs-sys/: Cargo.toml  build.rs  wrapper.h
obs-sys/src/: lib.rs
obs-wlroots/: Cargo.toml
obs-wlroots/src/: lib.rs  mmap.rs  shm.rs  source.rs
obs/src/: data.rs  gs.rs  lib.rs  properties.rs  source.rs
obs/tests/: version.rs
