[package]
name = "obs-wlroots"
version = "0.1.0"
authors = ["Matt Coffin <mcoffin@qw-corp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
libc = "*"

[dependencies.wayland-client]
version = "0.24"
features = ["use_system_lib"]

[dependencies.wayland-protocols]
version = "0.24"
features = ["client", "unstable_protocols"]

[dependencies.obs]
path = "../obs"

[build-dependencies]
bindgen = "0.51"
pkg-config = "0.3"
